--- a/conf/index.html
+++ b/conf/index.html
@@ -21,15 +21,15 @@
         <div class='item-container-content'>
             <label class='item'>
                 Background Color
-                <input id='background_color_picker' type='text' class='item-color item-color-normal' value='#000000'>
+                <input id='background_color_picker' type='text' class='item-color item-color-normal' value='0x000000'>
             </label>
             <label class='item'>
                 First Foreground Color
-                <input id='first_foreground_color_picker' type='text' class='item-color item-color-normal' value='#FFFFFF'>
+                <input id='first_foreground_color_picker' type='text' class='item-color item-color-normal' value='0xFFFFFF'>
             </label>
             <label class='item'>
                 Second Foreground Color
-                <input id='second_foreground_color_picker' type='text' class='item-color item-color-normal' value='#FFFFFF'>
+                <input id='second_foreground_color_picker' type='text' class='item-color item-color-normal' value='0xFFFFFF'>
             </label>
         </div>
         <div class='item-container-footer'>
