--- a/conf/index.html
+++ b/conf/index.html
@@ -8,14 +8,6 @@
 </head>
 
 <body>
-    <h1 class='title'>Grid Color Configuration</h1>
-    <div class='item-container'>
-        <div class='item-container-content'>
-            <div class='item'>
-                Use this configuration page to choose the settings you would like applied to this watchface.
-            </div>
-        </div>
-    </div>
     <div class='item-container'>
         <div class='item-container-header'>Colors</div>
         <div class='item-container-content'>
@@ -39,7 +31,7 @@
             </div>
         </div>
         <div class='item-container-footer'>
-            Choose the app's colors. Note: Only available on Basalt watches that support many colors.
+            Choose the app's colors.
         </div>
     </div>
     <div class='item-container'>
