--- a/conf/index.html
+++ b/conf/index.html
@@ -12,15 +12,15 @@
         <div class='item-container-header'>Colors</div>
         <div class='item-container-content'>
             <label class='item'>
-                Background Color
+                Background Color (S)
                 <input id='background_color_picker' type='text' class='item-color item-color-sunny' value='0x000000'>
             </label>
             <label class='item'>
-                First Foreground Color
+                First Foreground Color (S)
                 <input id='first_foreground_color_picker' type='text' class='item-color item-color-sunny' value='0xFFFFFF'>
             </label>
             <label class='item'>
-                Second Foreground Color
+                Second Foreground Color (S)
                 <input id='second_foreground_color_picker' type='text' class='item-color item-color-sunny' value='0xFFFFFF'>
             </label>
             <div class='item-container-content'>
