--- a/conf/index.html
+++ b/conf/index.html
@@ -13,15 +13,15 @@
         <div class='item-container-content'>
             <label class='item'>
                 Background Color
-                <input id='background_color_picker' type='text' class='item-color item-color-sunny' value='0x000000'>
+                <input id='background_color_picker' type='text' class='item-color item-color-normal' value='0x000000'>
             </label>
             <label class='item'>
                 First Foreground Color
-                <input id='first_foreground_color_picker' type='text' class='item-color item-color-sunny' value='0xFFFFFF'>
+                <input id='first_foreground_color_picker' type='text' class='item-color item-color-normal' value='0xFFFFFF'>
             </label>
             <label class='item'>
                 Second Foreground Color
-                <input id='second_foreground_color_picker' type='text' class='item-color item-color-sunny' value='0xFFFFFF'>
+                <input id='second_foreground_color_picker' type='text' class='item-color item-color-normal' value='0xFFFFFF'>
             </label>
             <div class='item-container-content'>
                 <label class='item'>
